--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,20 +7,67 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-.env
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
+# Build outputs
+dist/
+dist-ssr/
+build/
+out/
+.next/
+.vercel/
+.vercel-build/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+!.env.template
+*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# Testing
+coverage/
+.nyc_output/
+test-results/
+playwright-report/
+
+# TypeScript
+*.tsbuildinfo
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.temp/
+
+# Vite
+.vite/
+
+# Package manager locks (keep yarn.lock, ignore others)
+package-lock.json
+pnpm-lock.yaml
