chore: update app config, components, services, i18n, widgets, and security features

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-starter-kit",
   "private": true,
   "scripts": {
-    "setup": "node setup.js",
+    "setup": "tsx --tsconfig tsconfig.setup.json setup.ts",
     "build": "turbo run build",
     "dev": "cd apps/app && EXPO_IOS_SIMULATOR_DEVICE_NAME=D44A1507-3E39-4AA2-9662-F1CC7C832D68 yarn dev",
     "lint": "turbo run lint",
@@ -31,11 +31,13 @@
     "ios": "cd apps/app && expo run:ios"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "inquirer": "^9.2.15",
     "ora": "^7.0.1",
     "prettier": "^3.3.3",
+    "tsx": "^4.20.3",
     "turbo": "latest"
   },
   "packageManager": "yarn@4.9.1",
