--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,6 +21,9 @@
     "align-deps": "yarn expo install --fix",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:bench": "jest --testPathPattern=performance",
+    "test:web": "jest --testPathPattern=platform/web",
     "test:maestro": "maestro test -e MAESTRO_APP_ID=com.helloworld .maestro/flows",
     "adb": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:3000 tcp:3000 && adb reverse tcp:9001 tcp:9001 && adb reverse tcp:8081 tcp:8081",
     "build:ios:sim": "eas build --profile development --platform ios --local",
@@ -57,6 +60,7 @@
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
+    "expo-device": "^8.0.10",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
