--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -61,8 +61,10 @@
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-device": "^8.0.10",
+    "expo-document-picker": "^14.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
+    "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
