fix: Removed private keys from client-side environment variables (EXPO_PUBLIC_APPLE_PRIVATE_KEY, EXPO_PUBLIC_APPLE_KEY_ID, EXPO_PUBLIC_FCM_SERVER_KEY) - these should now be configured in your backend dashboard (Supabase Auth or Convex env vars).

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -67,12 +67,16 @@ EXPO_PUBLIC_SENTRY_DSN=your-sentry-dsn
 # ============================================
 # OAuth Providers (Optional)
 # ============================================
+# Google OAuth - Get from Google Cloud Console
 EXPO_PUBLIC_GOOGLE_CLIENT_ID=your-google-client-id
 EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=your-google-ios-client-id
+
+# Apple Sign-In - Only public identifiers needed here
+# The private key and secret should be configured in your backend dashboard:
+# - Supabase: Auth → Providers → Apple (enter Services ID, Team ID, Key ID, and Private Key there)
+# - Convex: Dashboard → Settings → Environment Variables (AUTH_APPLE_ID, AUTH_APPLE_SECRET)
 EXPO_PUBLIC_APPLE_SERVICES_ID=your-apple-services-id
 EXPO_PUBLIC_APPLE_TEAM_ID=your-apple-team-id
-EXPO_PUBLIC_APPLE_PRIVATE_KEY=your-apple-private-key
-EXPO_PUBLIC_APPLE_KEY_ID=your-apple-key-id
 
 # ============================================
 # Deep Link Overrides (Optional)
