--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/react-native": "^0.73.0",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "inquirer": "^9.2.15",
