Fix TypeScript config, add Supabase migrations, and fix Convex provider crash
This commit introduces several critical fixes and improvements to the boilerplate:

## 1. Fixed TypeScript Configuration (apps/app/tsconfig.json)

**Problem:** Running `npx tsc --noEmit` produced type conflicts:
- TS6200: Definitions conflict (BlobPart, FormData, RequestInfo, XMLHttpRequestResponseType)
- TS2403: Variable 'require' type mismatch (Require vs NodeRequire)

**Solution:**
- Removed "dom" from lib array (React Native provides its own web-like APIs)
- Removed "node" from types array (prevents NodeRequire conflicts)
- Removed typeRoots configuration (TypeScript discovers types automatically)

**Result:** Zero TypeScript errors, clean compilation of 2,563 files ✅

## 2. Added Supabase Migrations Infrastructure

**Why migrations instead of `schema.sql`?** Migrations provide version control and prevent "already exists" errors when running the schema multiple times. This is the industry standard for managing database schemas in production (used by Rails, Django, Laravel, Prisma, etc.).

**New Files:**
- supabase/migrations/20260122101738_initial_schema.sql
  - Complete initial schema with profiles, push_tokens, user_preferences, waitlist tables
  - All using IF NOT EXISTS and DROP POLICY IF EXISTS for idempotency
  - Includes triggers (handle_new_user, handle_updated_at) and functions
- supabase/migrations/README.md
  - Comprehensive guide: creation, application, best practices, rollback
  - Migration patterns and troubleshooting
- supabase/TROUBLESHOOTING.md
  - Profile 404 errors, RLS issues, migration errors
  - TypeScript errors, localhost port configuration
  - Convex provider error troubleshooting

**Updated Files:**
- supabase/schema.sql - Added deprecation notice directing to migrations
- AGENTS.md - Added "Supabase Database Migrations" section with best practices
- vibe/SUPABASE.md - Added migration setup instructions and troubleshooting section

**Benefits:**
- Version-cont

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -30,7 +30,8 @@ EXPO_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_your-key-here
 # Get this from: https://dashboard.convex.dev or by running `npx convex dev`
 # Only needed if EXPO_PUBLIC_BACKEND_PROVIDER=convex
 # Note: Convex requires 'npx convex dev' running locally (no mock mode)
-EXPO_PUBLIC_CONVEX_URL=https://your-deployment.convex.cloud
+# Comment out or remove this line if using Supabase
+# EXPO_PUBLIC_CONVEX_URL=https://your-deployment.convex.cloud
 
 # Server-side Convex variables (set in Convex Dashboard, NOT here):
 # -----------------------------------------------------------------
